--- a/PlanterTake3/app/src/main/res/values/strings.xml
+++ b/PlanterTake3/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="height_of_crop">Height of Crop</string>
     <string name="please_enter_the_appropriate_value">Please enter the Appropriate Value</string>
     <string name="finish">Finish</string>
+    <string name="go_home">Go Home</string>
 </resources>
